versioned_docs/version-0.8.0/tools/cli/package-management/command-reference/2.add.md
# kcl mod add

Add a dependency to a kcl package.

## Usage

```shell
kcl mod add [options][package_reference]
```

## Description

`kcl mod add` will add a dependency to a kcl package. The dependency can be from a git repository, or a kcl registry.

`package_reference` is a kcl package reference, looks like `package_name:version`.

## options

### --git

Specify the git url of the dependency from a git repository.

### --tag

Specify the tag of the dependency from a git repository.

### --help, -h

Show help for `kcl mod add` command.

## Examples

### Add a dependency from kcl registry

Add kcl dependency named `k8s` to the current package.The version of the dependency will be the latest version.

```shell
kcl mod add k8s
```

Add kcl dependency named 'k8s' with version 'v1.27.2'.

```shell
kcl mod add k8s:1.29
```

### Add a dependency from git repository

Add kcl dependency named `konfig` with version `v0.1.0` from git repository.

```shell
kcl mod add --git https://github.com/awesome-kusion/konfig.git --tag v0.1.0
```
